# astral-sdk

./: .gitignore  LICENSE  NOTICE  OVERHAUL_AUDIT.md  Package.resolved  Package.swift  README.md  pyproject.toml
.github/workflows/: sdk-sitl.yml  swift.yml
.serena/: project.yml
docs/: component-and-sequence-diagrams.md  phrover-fixes-2026-07-08.md  qwen-vllm-runbook.md
docs/superpowers/plans/: 2026-07-10-visual-target-stall-recovery.md  2026-07-16-hardened-navigation-reconciliation.md
docs/superpowers/specs/: 2026-07-10-visual-target-stall-recovery-design.md  2026-07-16-hardened-navigation-reconciliation-design.md
examples/: README.md  arm_takeoff_land.py  camera_capture.py  motor_test.py
examples/PhroverOperator/PhroverOperator/: Info.plist
examples/PhroverOperator/PhroverOperator.xcodeproj/: project.pbxproj
examples/PhroverOperator/PhroverOperator/App/: PhroverOperatorApp.swift
examples/PhroverOperator/PhroverOperator/Config/: PhroverCloud.example.plist
examples/PhroverOperator/PhroverOperator/Views/: AuthView.swift  ConversationView.swift  DriveView.swift  NavigateView.swift
examples/PhroverOperator/PhroverOperatorUITests/: PhroverOperatorUITests.swift
examples/sitl/: README.md  fly_sitl.py
examples/sitl/delta_wing/: delta_wing.usda  delta_wing_params.yaml  flight_log.csv
ros2_ws/src/astral_drone/: package.xml  setup.cfg  setup.py
ros2_ws/src/astral_drone/astral_drone/: __init__.py  camera_node.py  mavlink_bridge.py
ros2_ws/src/astral_drone/config/: nav2_params.yaml
ros2_ws/src/astral_drone/launch/: full_stack.launch.py
src/astral_sdk/: __init__.py  arm_disarm.py  config_example.yaml  drone.py  motor_test.py
src/astral_sdk/camera/: __init__.py  auto.py  base.py  intel_d435i.py  oakdlite.py
swift/Sources/PhroverCloud/Auth/: AuthService.swift  User.swift
swift/Sources/PhroverCloud/Cloud/: APIClient.swift  ClaudeDialogClient.swift  CloudBrain.swift  HybridBrain.swift  MQTTService.swift  NetworkMonitor.swift  RoverTelemetryPublisher.swift
swift/Sources/PhroverCloud/Config/: PhroverCloudConfig.swift
swift/Sources/PhroverKit/Config/: RoverConfig.swift
swift/Sources/PhroverKit/Nav/: CostmapBuilder.swift  (+4 more)
swift/Sources/RoverNav/: AStarPlanner.swift  Costmap.swift  DifferentialDrive.swift  DriveProgressWatchdog.swift  FrontierFinder.swift  Geometry.swift  PursuitController.swift
swift/Tests/PhroverKitLiveProbes/: CloudBrainLiveMissionTests.swift  OnDeviceBrainLiveProbe.swift
swift/Tests/PhroverKitTests/: DetectorTests.swift  MissionAgentTests.swift  MissionCognitionTests.swift  NavigationSafetyTests.swift  OnDeviceBrainTests.swift  PerceptionDebugSummaryTests.swift  RotationCommandTests.swift  RoverControlTests.swift  UnprojectionTests.swift  VoiceDriveCommandTests.swift
swift/Tests/PhroverSimTests/: CapstoneTests.swift  CloudBrainCapstoneTests.swift  EventLog.swift  GodotBattery.swift  GodotGrid.swift  GodotLink.swift  GodotMotion.swift  GodotPerception.swift  GodotTeamRadio.swift  LearnPriorsTests.swift  LiveCapstoneBeats.swift  PersonCrossingMotionTests.swift  RecordingBrain.swift  ScriptedDepotBrain.swift  ScriptedVoice.swift  SimMesh.swift  TeamCloudBrainTests.swift
swift/Tests/RoverNavTests/: AStarPlannerTests.swift  CostmapTests.swift  DifferentialDriveTests.swift  FrontierFinderTests.swift  NavIntegrationTests.swift  PursuitControllerTests.swift
tests/: test_e2e_sitl.py  test_imports.py
(+22 files in other folders)
