<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astral_drone</name>
  <version>0.1.0</version>
  <description>ROS 2 integration for astral-sdk: camera bridge, MAVLink bridge, Nav2 stack.</description>
  <maintainer email="team@astral.us">Astral AI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>

  <!-- Isaac ROS dependencies (optional) -->
  <depend>isaac_ros_visual_slam</depend>
  <depend>isaac_ros_nvblox</depend>

  <!-- Nav2 dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
